--- a/.travis.yml
+++ b/.travis.yml
@@ -8,21 +8,35 @@ language: python
 python:
   - "3.8"
 
-# Instalação de Módulos que são necessários para a Aplicação.
-install:
-  - pip install flask
+
+addons:
+  sonarcloud:
+    organization: luizzenha-1
+    token: $SONAR_TOKEN
 
 
-# Defini o script de Teste que deve rodar toda vez que o código for alterado.
-script:
-  - python -m unittest -v test
+jobs:
+  include:
+    - stage: Build & Tests
+      name: "Unit Test, Quality & Security"
+
+      # Instalação de Módulos que são necessários para a Aplicação.
+      install:
+        - pip install flask flask-wtf coverage
+
+      # Defini o script de Teste que deve rodar toda vez que o código for alterado.
+      script:
+        - coverage run test.py || travis_terminate 1;
+        - coverage report app.py || travis_terminate 1;
+        - coverage xml app.py || travis_terminate 1;
+        - sonar-scanner || travis_terminate 1;
 
 
   # Definir o Deploy no Heroku
-deploy:
-  provider: heroku
-  api_key: $HEROKU_API_KEY
-  edge: true 
-  app: devops-lab-zenha
-  on:
-      branch: main
+      deploy:
+        provider: heroku
+        api_key: $HEROKU_API_KEY
+        edge: true 
+        app: devops-lab-zenha
+        on:
+            branch: main
