--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ python:
 addons:
   sonarcloud:
     organization: luizzenha-1
-    token:
-      secure: $SONAR_TOKEN
+    token: ${SONAR_TOKEN}
 
 
 jobs:
