--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,11 @@
 # must be unique in a given SonarQube instance
 sonar.projectKey=devops-lab
+sonar.projectName=LabDevops
+sonar.projectVersion=1.0
+sonar.sourcers=app.py
+sonar.language=py
+sonar.python.version=3.8
+sonar.sourceEnconding=UTF-8
+sonar.tests=test.py
+sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coveragePlugin=cobertura
