Update Quality Gate

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,4 @@ sonar.sourceEnconding=UTF-8
 sonar.tests=test.py
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.python.coveragePlugin=cobertura
+sonar.qualitygate.wait=true
