--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@
 sonar.projectKey=devops-lab
 sonar.projectName=LabDevops
 sonar.projectVersion=1.0
-sonar.sourcers=app.py
+sonar.sources=app.py
 sonar.language=py
 sonar.python.version=3.8
-sonar.sourceEnconding=UTF-8
-sonar.tests=test.py
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.sourceEncoding=UTF-8
+sonar.tests=test.py                                                
+sonar.python.coverage.reportPaths=coverage.xml                     
 sonar.python.coveragePlugin=cobertura
 sonar.qualitygate.wait=true
