--- a/.travis.yml
+++ b/.travis.yml
@@ -48,3 +48,20 @@ jobs:
       name: GET URL stage
       script:
         - curl https://devops-lab-zenha.herokuapp.com/ | grep Hello || travis_terminate
+    
+    - stage: Production Deploy
+      name: Google Api Engine
+      script: skip
+
+      # Definir o Deploy no Google Cloud
+      deploy:
+        provider: gae
+        keyfile: ../gcpkey.json
+        project: zenha-329914
+        on:
+          branch: main
+
+    - stage: Production Test
+      name: GET URL Production
+      script:
+        - curl https://zenha-329914.uc.r.appspot.com/ | grep Hello || travis_terminate 1;
