--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ addons:
     token: ${SONAR_TOKEN}
 
 
+before_install:
+- openssl aes-256-cbc -K $encrypted_6f8fac1b445e_key -iv $encrypted_6f8fac1b445e_iv -in gcpkey.json.enc -out ../gcpkey.json -d
+
 jobs:
   include:
     - stage: Build & Tests
